<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelNotebook</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_camera_availlable">sorry, no camera availlable.</string>

    <!-- Home menu actions -->
    <string name="title_activity_home">Availlable notebooks</string>
    <string name="new_notebook">New Notebook</string>
    <string name="title_actiondialog">Primary Actions</string>

    <!-- Notebook menu actions -->
    <string name="get_planning">Get the planning</string>
    <string name="add_travel_item">Add travel note</string>
    <string name="add_post_item">Add post note</string>

    <!-- PostItem activity popup actions -->
    <string name="add_from_gallery">Gallery</string>
    <string name="add_from_camera">Camera</string>
    <string name="add_from_actiondialog">Photo from&#8230;</string>

    <!-- Activity titles -->
    <string name="title_activity_notebook">NotebookActivity</string>
    <string name="title_activity_notebook_form">NotebookFormActivity</string>
    <string name="title_activity_travel_item_from">TravelItemFormActivity</string>
    <string name="title_activity_post_item_form">PostItemFormActivity</string>

    <!-- New notebook -->
    <string name="notebook_name_label">Notebook name :</string>
    <string name="notebook_picker_label">Color :</string>

    <!-- New travel item -->
    <string name="travel_item_title_label">Note title :</string>
    <string name="travel_item_description_label">Description :</string>
    <string name="travel_item_tag_label">Type :</string>
    <string name="travel_item_start_date_label">Start date :</string>
    <string name="travel_item_end_date_label">End date :</string>
    <string name="travel_item_start_location_label">Start address :</string>
    <string name="travel_item_end_location_label">End address :</string>

    <!-- New post item -->
    <string name="post_item_photo_label">Photos :</string>
    <string name="add_photo">Append</string>

    <!-- Date Time picker -->
    <string name="pick_date">Pick a date</string>

    <!-- General item actions -->
    <string name="title_item_actions_popup">Actions:</string>
    <string name="show">show</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="title_activity_show_post">ShowPost</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_travel_item_show">TravelItemShowActivity</string>
    <string name="date_image">date image</string>

</resources>