<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PostItemFormActivity" >

    <ScrollView
        android:id="@+id/data_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/post_item_title"
                android:text="@string/travel_item_title_label" />

            <EditText
                android:id="@+id/post_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tv_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/post_item_description"
                android:text="@string/travel_item_description_label" />

            <EditText
                android:id="@+id/post_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/tv_start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/post_item_start_date"
                android:text="@string/travel_item_start_date_label" />

            <TextView
                android:id="@+id/post_item_start_date"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="12"
                android:onClick="showDatePickerDialog" />

            <TextView
                android:id="@+id/tv_start_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/post_item_start_location"
                android:text="@string/travel_item_start_location_label" />

            <EditText
                android:id="@+id/post_item_start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_save"
            android:text="@string/cancel" />
    </RelativeLayout>

</RelativeLayout>