<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TravelItemFormActivity" >

    <ScrollView
        android:id="@+id/data_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/item_title"
                android:text="@string/travel_item_title_label" />

            <EditText
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tv_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/item_description"
                android:text="@string/travel_item_description_label" />

            <EditText
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_tag_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/item_tag"
                    android:text="@string/travel_item_tag_label" />

                <Spinner
                    android:id="@+id/item_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dip"
                    android:ems="10" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
                android:stretchColumns="1" >

                <TableRow>

                    <TextView
                        android:id="@+id/tv_start_date_label"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:labelFor="@+id/travel_item_start_date"
                        android:text="@string/travel_item_start_date_label" />

                    <TextView
                        android:id="@+id/tv_end_date_label"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:labelFor="@+id/travel_item_end_date"
                        android:text="@string/travel_item_end_date_label" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/travel_item_start_date"
                        style="@android:style/Widget.DeviceDefault.Light.Spinner"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:ems="12"
                        android:onClick="showDatePickerDialog" />

                    <TextView
                        android:id="@+id/travel_item_end_date"
                        style="@android:style/Widget.DeviceDefault.Light.Spinner"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:ems="12"
                        android:onClick="showDatePickerDialog" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tv_start_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/item_start_location"
                android:text="@string/travel_item_start_location_label" />

            <EditText
                android:id="@+id/item_start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_end_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/item_end_location"
                android:text="@string/travel_item_end_location_label" />

            <EditText
                android:id="@+id/item_end_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_cancel"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_save"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>